examples/deamonsets.yaml
#  Deamsetes used to ensure pod is running on every node 
#why we use: if you want run pod on every node. 
# what happen: pod will be availabel on every node and its single pod 
# where use: logging architecure eg: grafana promethesues elk
# network pod:  flanel or any network 
# storage pod: storage manage used 
# Deamnsets provide facilities if you add or remove nodes auto pods can manage 
#  kubernwetes kubelet and kube-proxy 
# kubectl get ds  -n namespace 
# read more about use document link: 
# https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: storeapp
  namespace: learnweb
  labels:
    app: storeapp
spec:
  selector:
    matchLabels:
      app: storeapp
  template:
    metadata:
      labels:
        app: storeapp
    spec:
      containers:
      - name: storeapp
        image: nginx:latest
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
