examples/hostpathvolume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "lcoalapp"
  namespace: default
  labels:
    app: "localapp"
spec:
  containers:
  - name: web
    image: "nginx:latest"
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort:  80
      name:  http
    volumeMounts:
    - name: datavol
      mountPath: /opt
  volumes:
    - name: datavol
      persistentVolumeClaim:
        claimName: local-vol-pvc
