examples/nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80 
  nodeSelector: 
    app:test
