examples/webappvol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "webapp"
  namespace: default
  labels:
    app: "web"
spec:
  containers:
  - name: webapp
    image: "nginx:latest"
    resources:
     limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort:  80
      name:  http
    volumeMounts:
    - name: pod2datavol
      mountPath: /opt
  volumes:
    - name: pod2datavol
      persistentVolumeClaim: 
        claimName: webapp-pvc
