examples/servicedaem.yaml
kind: Service
apiVersion: v1
metadata:
  name: storeapp
  namespace: learnweb
spec:
  selector:
    app: storeapp
  type:  ClusterIP
  ports:
  - name: storeapp
    port:  80
    targetPort:  80
