examples/ingress-webapp.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webappingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /webapp
          pathType: Prefix
          backend:
            service:
              name: webapp
              port:
                number: 80
  - http:
      paths:
        - path: /oxer
          pathType: Prefix
          backend:
            service:
              name: app
              port:
                number: 80
